<resources>
    <string name="app_name">SynologyUploader</string>
    <string name="buttonSettings">Settings</string>
    <string name="buttonGo">Upload All!</string>
    <string name="counter">Ready...</string>
    <string name="address">Address or IP</string>
    <string name="user">User</string>
    <string name="passwd">Password</string>
    <string name="buttonSave">Check it!</string>
    <string name="settingViewStatus">helper</string>
    <string name="settingViewDirectory">Directory</string>
    <string name="chckBoxUseHttps">Https</string>
    <string name="port">Port</string>
    <string name="chckBoxDelete">Delete photos after successful upload</string>
    <string name="chkkBoxLog">Debug - Create log file</string>
    <string name="connectionCheckOK">Everything OK! Push the button again to save it.</string>
    <string name="connecting">Connecting to the server...</string>
    <string name="notSupportedDevice">Not possible to get images. Probably not supported device.</string>
    <string name="nothingToUpload">Nothing to upload.</string>
    <string name="uploadOK">"Everything uploaded OK!"</string>
    <string name="commonError">Error - </string>
    <string name="versionReadTag">VersionRead</string>
    <string name="newsFirstRow">New release is here!</string>
    <string name="tagLastVersion">1.6</string>
    <string name="SaveAndExit">Save and Exit</string>
    <string name="news">
        <b>Version 1.6</b>\n
        - Added option for image selection\n
        \n
        <b>Version 1.5</b>\n
        - Wifi is connected automatically\n
        - Uploading progress bar added\n
        \n
        <b>Version 1.4</b>\n
        - Fix - solving OutOfMemoryException when upload starts by settings Chunksize = 1MB\n
        - More logging points if logger is enabled\n
        \n
        <b>Version 1.3</b>\n
        - Fix - app crashes during the start\n
        \n
        <b>Version 1.2</b>\n
        - User can choose if application will log activities in the Settings windows. Log file is saved to the sdcard to file SYNOUPLD.LOG\n
        - Small refactoring\n
        \n
        <b>Version 1.1</b>\n
        - IP port added for users who don\'t use standard ports (http - 5000, https - 5001). Please add your port at Settings\n
        - User can choose if successfully uploaded photos wil be deleted or not\n
        - HTTPS support added\n
        \n
        <b>Version 1.0</b>\n
        - Initial release
    </string>
    <string name="buttonGoselection">Upload Selected</string>
    <string name="buttonSelectimages">Select Images</string>
    <string name="title_activity_image_select">ImageSelect</string>
</resources>
